--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
 }
 
 .main-div {
-    background-image: url('images/background.jpg');
+    background-image: url("background.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     display: flex;
@@ -73,7 +73,7 @@ body{
     overflow: hidden;
 }
 .banner{
-    background-image: url('images/pricing-menubanner.jpg');
+    background-image: url("pricing-menubanner.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     display: flex;
@@ -352,7 +352,7 @@ footer{
     }
 
     .banner{
-        background-image: url(images/pricing-menubanner.jpg);
+        background-image: url("pricing-menubanner.jpg");
         background-repeat: no-repeat;
         background-position: center center;
         display: flex;
