--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300&family=Sofia+Sans+Condensed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap');
@@ -14,7 +15,7 @@ body{
 }
 
 .navbar{
-    background-color: #FF7E44;
+    background-color: #0766AD;
 }
 
 .logo-image{
@@ -53,7 +54,7 @@ body{
     font-size: 5vw;
     margin: 0;
     color: azure;
-    font-family: monospace;
+    font-family: 'Kaushan Script', cursive;
     text-align: start;
     max-width: 26vmax ;
     margin-right: 60vw;
@@ -65,11 +66,11 @@ body{
 }
 
 .about-para{
-    color: black;
+    color: white;
     width: auto;
     height:auto;
     padding: 5%;
-    background-color:#FF7E44;
+    background-color:#0766AD;
     font-family: 'Kalam', cursive;
     font-size: 1rem;
     font-weight: 600;
@@ -102,8 +103,19 @@ body{
     overflow: hidden;
 }
 
+.card-body{
+    background-image: linear-gradient(to top, #082044, #071b36, #081628, #060f1a, #02050a);
+}
+
+.card-title{
+    color: white;
+}
+
+.card-text{
+    color: white;
+}
 .for-contact{
-    background-color: #FF7E44;
+    background-color: #0766AD;
     padding-top: 1rem;
     overflow: hidden;
     max-width: 100%;
@@ -128,7 +140,7 @@ h2{
 }
 
 .map-div{
-    background-color: #FF7E44;
+    background-color: #0766AD;
     max-width: 100%;
     overflow: hidden;
     width: auto;
@@ -141,7 +153,7 @@ iframe{
     border: 0;
     height: 27rem;
     width: 100%;
-    padding: 2%;
+    padding: 1%;
     overflow: hidden;
 }
 
@@ -199,7 +211,7 @@ iframe{
     width: 7vw;
     display: block;
     text-align: center;
-    padding: 1vh 0 1.6vh;
+    padding: 1vh 0 1vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -224,6 +236,9 @@ iframe{
     padding-top: 0.7vh;
 }
 
+.whatsapp-logo{
+    height: 5vh;
+}
 .time{
     display: flex;
     flex-direction: column;
@@ -352,6 +367,11 @@ footer{
     color: white;
 }
 
+
+.images-gallery{
+    padding: 0 10% 0 10%;
+}
+
 @media (min-width: 992px){
     .navbar-expand-lg .navbar-collapse {
         display: flex!important;
@@ -414,10 +434,13 @@ footer{
     }
 
     .direction-logo{
-        height: 3vh;
-        padding-top: 0.6vh;
+        height: 4vh;
+        padding-top: 0vh;
     }
-
+    
+    .whatsapp-logo{
+        height: 4vh;
+    }
     .ph-para,.dr-para,.timing{
         font-size: 2vh;
     }
@@ -443,5 +466,9 @@ footer{
 
     .map-div{
         width: 100%;
+    }
+
+    .images-gallery{
+        padding: 0 3% 0 3%;
     }
 }
